# AlmostUsefulTypes

./: CMakeLists.txt
test/: CMakeLists.txt  test_iterator.cpp  test_stack.cpp  test_tree.cpp
types/: directionaliterator.h  stack.h  tree.h
